Omnifood - Featured-In section - Title - Contrast ratio fixed.

--- a/starter/07-Omnifood-Desktop/css/style.css
+++ b/starter/07-Omnifood-Desktop/css/style.css
@@ -124,7 +124,7 @@
   font-weight: 500;
   text-align: center;
   margin-bottom: 2.4rem;
-  color: #888;
+  color: #757575;
 }
 
 .logos {
